# AVAT

./: .gitignore  404.html  CNAME  DEPLOYMENT.md  Dockerfile  README.md  README_ENHANCED.md  apt.txt  asset-manifest.json  docker-compose.yml  enhanced_data_pipeline.py  extraction.py  index.html  pip.conf  pyproject.toml  railway.json  render.yaml  requirements-test.txt  requirements.txt  system_architecture.md  url_storage.py  urls.db  web_scraping_DMV.py
.github/workflows/: deploy.yml  schedule_scrape.yml
backend/: __init__.py  main.py
backend/api/: accidents.py  analytics.py  reports.py  websocket.py
backend/models/: schemas.py
backend/services/: cache_service.py  data_service.py  dmv_scraper_service.py
backend/static/: asset-manifest.json  index.html  manifest.json
backend/utils/: database.py  logger.py  migrations.py  pdf_parser.py
frontend/: .env.example  package-lock.json  package.json  tailwind.config.js
frontend/public/: index.html
frontend/src/: App.tsx  index.css  index.tsx
scripts/: test-deployment.sh
scripts/scrape/: full-sync.sh  scan-index.sh  status.sh  sync-index.sh  sync-pdfs.sh
scripts/test/: api_smoke.sh  ingest_local_pdf.py  integration.sh  load_scrape.sh  mapbox_token.sh  unit.sh
static/css/: main.156acab1.css  main.156acab1.css.map  main.48443892.css  main.48443892.css.map
static/js/: 33.2183c46f.chunk.js  879.719fd7e6.chunk.js  main.42b9facd.js  main.42b9facd.js.map  main.52a8099a.js  main.52a8099a.js.LICENSE.txt  main.52a8099a.js.map  main.a02f8a52.js  main.a02f8a52.js.map  main.d3f63b89.js  main.d3f63b89.js.map  (+2 more)
(+23 files in other folders)
